--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-scripts": "4.0.3",
     "redux-localstorage-simple": "^2.4.0",
     "styled-components": "^5.2.1",
+    "swr": "^0.5.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "web3": "^1.3.4",
