--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@ethersproject/contracts": "^5.0.12",
     "@ethersproject/providers": "^5.0.24",
     "@ethersproject/solidity": "^5.0.10",
+    "@ethersproject/units": "^5.0.11",
     "@pancakeswap-libs/sdk": "^1.0.1",
     "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^5.11.4",
