Update env file with contract address on mainet

--- a/.env.development
+++ b/.env.development
@@ -8,3 +8,6 @@ REACT_APP_NODE_2 = "https://data-seed-prebsc-1-s1.binance.org:8545/"
 
 # 10+ nodes balanced in each region, global
 REACT_APP_NODE_3 = "https://data-seed-prebsc-1-s1.binance.org:8545/"
+
+REACT_APP_BUSD_ADDRESS="0xf89bfaefcea6062e37e536a243669d1b028b9fc7"
+REACT_APP_CAKE_ADDRESS="0x804a1440e73a563bfc545f001b4dde120f4c2b8e"
