--- a/.env.production
+++ b/.env.production
@@ -8,3 +8,6 @@ REACT_APP_NODE_2 = "https://data-seed-prebsc-1-s1.binance.org:8545/"
 
 # 10+ nodes balanced in each region, global
 REACT_APP_NODE_3 = "https://data-seed-prebsc-1-s1.binance.org:8545/"
+
+REACT_APP_BUSD_ADDRESS="0xe9e7CEA3DedcA5984780Bafc599bD69ADd087D56"
+REACT_APP_CAKE_ADDRESS="0x0e09fabb73bd3ade0a17ecc321fd13a19e81ce82
